force-app/main/default/objects/vlocity_ins__InsuranceTermConfiguration__mdt/vlocity_ins__InsuranceTermConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>This object is a custom metadata type to setup the power attribute term detail. It is to support different duration terms for 236. It can also be flexible to add more types of term definitions. It is also possible to use this custom metadata type to support quote/policy custom terms in the future releases.</description>
    <label>Insurance Term Configuration</label>
    <pluralLabel>Insurance Term Configurations</pluralLabel>
</CustomObject>