force-app/main/default/objects/vlocity_ins__InsuranceTermConfiguration__mdt/fields/vlocity_ins__DurationUnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DurationUnitofMeasure__c</fullName>
    <description>Unit of Mesure in Month / Day</description>
    <label>Duration Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>