force-app/main/default/objects/vlocity_ins__InsuranceTermConfiguration__mdt/fields/vlocity_ins__DurationValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DurationValue__c</fullName>
    <description>Value of Duration in Months / Days.</description>
    <label>Duration Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>