force-app/main/default/objects/vlocity_ins__InsuranceTermConfiguration__mdt/fields/vlocity_ins__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Type__c</fullName>
    <description>It represents the type of term</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duration</fullName>
                <default>true</default>
                <label>Duration</label>
            </value>
            <value>
                <fullName>Rolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>